// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render React extensions correctly 1`] = `
<Extension
  currentUser={
    Object {
      "isLoggedIn": false,
    }
  }
  extension={
    Object {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={Object {}}
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  onFail={[MockFunction]}
  router={
    Object {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
>
  <div>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="Foo"
    >
      <SideEffect(NullComponent)
        defer={true}
        encodeSpecialCharacters={true}
        title="Foo"
      >
        <NullComponent
          defer={true}
          encodeSpecialCharacters={true}
          title="Foo"
        />
      </SideEffect(NullComponent)>
    </HelmetWrapper>
    <div />
  </div>
</Extension>
`;

exports[`should render React extensions correctly 2`] = `
<Extension
  currentUser={
    Object {
      "isLoggedIn": false,
    }
  }
  extension={
    Object {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={Object {}}
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  onFail={[MockFunction]}
  router={
    Object {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
>
  <div>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="Foo"
    >
      <SideEffect(NullComponent)
        defer={true}
        encodeSpecialCharacters={true}
        title="Foo"
      >
        <NullComponent
          defer={true}
          encodeSpecialCharacters={true}
          title="Foo"
        />
      </SideEffect(NullComponent)>
    </HelmetWrapper>
    <div
      className="extension"
    />
  </div>
</Extension>
`;
